# AssayShift-TF

./: .gitignore  README.md  pyproject.toml
assayshift_tf/: __init__.py  benchmark.py  cli.py  datasets.py  deep.py  embeddings.py  features.py  figures.py  manifest.py  metrics.py  models.py  peaks.py  real_eval.py  report.py  splits.py
configs/: demo.json
docs/: a100_sota_next_steps.md  dataset_scout.md  execution_log.md  mlcb_8page_draft.md  mlcb_abstract_draft.md  paper_outline.md
figures/: benchmark_schematic.mmd
reports/: cutrun_peak_qc.csv  demo_group_metrics.csv  demo_results.csv  demo_selective.csv  peak_inventory.csv  preliminary_results.md  real_assay_mvp_hg19_axisguard_bootstrap_cis.csv  real_assay_mvp_hg19_axisguard_group_metrics.csv  real_assay_mvp_hg19_axisguard_preliminary_results.md  real_assay_mvp_hg19_axisguard_results.csv  real_assay_mvp_hg19_axisguard_selective.csv  real_assay_mvp_hg19_bootstrap_cis.csv  real_assay_mvp_hg19_group_metrics.csv  real_assay_mvp_hg19_preliminary_results.md  real_assay_mvp_hg19_results.csv  real_assay_mvp_hg19_selective.csv  real_assay_mvp_hg19_split_counts.csv  real_encode_k562_grch38_axisguard_bootstrap_cis.csv  real_encode_k562_grch38_axisguard_group_metrics.csv  real_encode_k562_grch38_axisguard_preliminary_results.md  real_encode_k562_grch38_axisguard_results.csv  real_encode_k562_grch38_axisguard_selective.csv  real_encode_k562_grch38_axisguard_split_counts.csv  real_encode_k562_grch38_bootstrap_ci.csv  real_encode_k562_grch38_eval_bootstrap_cis.csv  real_encode_k562_grch38_eval_group_metrics.csv  (+24 more)
(+24 files in other folders)
